# llm-box

./: .gitignore  .pre-commit-config.yaml  README.md  alias.sh  cli.py  commands_tiers.md  conda-requirements.txt  llm-box.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml  publish.yml
Formula/: llm-box.rb
commands/: llm_cat.py  llm_ls.py
conda/: meta.yaml
docs/design/: README.md  architecture.md  branching-strategy.md  caching.md  commands.md  distribution.md  project-plan.md  providers.md  search.md
llm/: ollama_client.py
src/llm_box/: __init__.py  __main__.py  exceptions.py
src/llm_box/cache/: __init__.py  base.py  duckdb_cache.py  keys.py
src/llm_box/cli/: __init__.py  app.py  context.py  options.py  shortcuts.py
src/llm_box/commands/: __init__.py  ask.py  base.py  cat.py  doc.py  find.py  ls.py  registry.py  tldr.py  why.py
src/llm_box/config/: __init__.py  defaults.py  loader.py  schema.py
src/llm_box/output/: __init__.py  base.py  json_fmt.py  plain.py  rich_fmt.py
src/llm_box/plugins/: __init__.py
src/llm_box/providers/: __init__.py  anthropic.py  base.py  fallback.py  mock.py  ollama.py  openai.py  registry.py
src/llm_box/search/: __init__.py  engine.py  fuzzy.py  indexer.py  schema.py  semantic.py
src/llm_box/telemetry/: __init__.py
src/llm_box/utils/: files.py  hashing.py  logging.py  retry.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_cache.py  test_commands.py  test_config.py  test_exceptions.py  test_hashing.py  test_new_commands.py  test_output.py  test_providers.py  test_retry.py  test_search.py
utils/: file_scanner.py
